<resources>
    <string name="app_name">Proyecto Final</string>

    <string name="usser">Usuarios</string>
    <string name="pass">Contraseña</string>
    <string name="inicio">Inicia sesion</string>
    <string name="iniciar">Iniciar sesion</string>
    <string name="registrar">Registrate aqui</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>
    <!-- Administrador -->
    <string name="hola">Bienvenido!!</string>
    <string name="texto">Agrega o borra algun libro de tu lista</string>

    <string name="agregarTitulo">Añade un libro</string>
    <string name="nomLibro">Nombre del libro</string>
    <string name="cantLibro">Genero</string>
    <string name="prestLibro">Precio</string>
    <string name="disptLibro">Disponibilidad</string>
    <string name="renta">Renta  </string>
    <string name="venta">Venta </string>
    <string name="ambos">Ambos </string>
    <string name="guardar">Guardar </string>
    <string name="regresar">Regresar </string>
    <string name="editar">Editar </string>
    <string name="listaTitulo">Lista de libros </string>

    <string name="tituloBorrar">¿Que libro deseas borrar? </string>
    <string name="eliminar">Eliminar</string>

    <string-array name="stArrayGeneros">
        <item>Accion</item>
        <item>Ciencia ficcion</item>
        <item>Terror</item>
        <item>Romance</item>
        <item>Misterio</item>
        <item>Infantiles</item>
        <item>Auto ayuda</item>
    </string-array>
    <!-- Empleado -->

    <!-- Cliente -->
    <string name="titulo">Libreria virtual</string>
    <string name="descripcion">Bienvenido!!! Busca un libro desde nuestra aplicacion
        y ven a nuestra libreria a disfruta de tu libro favorito. </string>

    <string name="tituloLLenar">¿Que libro quieres rentar?</string>
    <string name="tituloComprar">Confirma la compra</string>
    <string name="sig">Siguiente</string>
    <string name="bus">Buscar</string>
    <string name="comp">Comprar</string>
    <string name="correo">Genero</string>
    <string name="tipo">Tipo de operacion</string>

    <string name="tiuloInfoLib">Detalles del libro</string>
    <string name="tiuloInfoComp">Detalles de la renta</string>
    <string name="libInfo">Detalles de el libro</string>
    <string name="devolucion">Fecha de devolucion</string>
    <string name="tiuloRec">Lee alguno de nuestros libros</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Buscar libro</string>
    <string name="menu_slideshow">Renta un libro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>