<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Agregar_Activity">

    <TextView
        android:id="@+id/textView5"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="107dp"
        android:text="@string/agregarTitulo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        style="@style/CustomEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/nomLibro"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Spinner
        android:id="@+id/spSpinner"
        style="@style/CustomSpinnerStyle"
        android:layout_width="287dp"
        android:layout_height="52dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="165dp"
        android:text="@string/cantLibro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtPrecio"
        style="@style/CustomEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/prestLibro"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spSpinner" />

    <EditText
        android:id="@+id/edtDescripcion"
        style="@style/CustomEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="Descripcion"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGrupo" />

    <RadioGroup
        android:id="@+id/rdGrupo"
        android:layout_width="369dp"
        android:layout_height="46dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio">

        <RadioButton
            android:id="@+id/rdRenta"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/renta"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdVenta"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/venta"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdAmbos"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/ambos"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGuardarLib"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="40dp"
        android:onClick="guardarLibro"
        android:text="@string/guardar"
        app:layout_constraintEnd_toStartOf="@+id/btnBorrarLib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />

    <Button
        android:id="@+id/btnBorrarLib"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="46dp"
        android:onClick="regresarAdmin"
        android:text="@string/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />

    <Button
        android:id="@+id/btnEditar"
        style="@style/CustomButtonStyle"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:onClick="buscarLibro"
        android:text="@string/editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarLib" />

</androidx.constraintlayout.widget.ConstraintLayout>
