<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/textView8"
        style="@style/CustomTextStyle"
        android:layout_width="340dp"
        android:layout_height="102dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="18dp"
        android:text="@string/tituloLLenar"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNomLibroBuscar"
        style="@style/CustomEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/nomLibro"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Switch
        android:id="@+id/swVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="70dp"
        android:text="@string/venta"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/swRenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomLibroBuscar" />

    <Switch
        android:id="@+id/swRenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="67dp"
        android:text="@string/renta"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomLibroBuscar" />

    <Button
        android:id="@+id/btnNuscar"
        style="@style/CustomButtonStyle"
        android:layout_width="178dp"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="117dp"
        android:text="@string/bus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVenta" />

</androidx.constraintlayout.widget.ConstraintLayout>