<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Borrar_Activity">

    <TextView
        android:id="@+id/textView7"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="36dp"
        android:text="@string/tituloBorrar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        style="@style/CustomEditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/nomLibro"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnEliminarLib"
        style="@style/CustomBorrar"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/btnRegresar"
        style="@style/CustomButtonStyle"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="98dp"
        android:onClick="regresarAdmin"
        android:text="@string/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarLib" />
</androidx.constraintlayout.widget.ConstraintLayout>