<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibroDetallesActivity">

    <TextView
        android:id="@+id/textView10"
        style="@style/CustomTextStyle"
        android:layout_width="275dp"
        android:layout_height="56dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="68dp"
        android:text="@string/libInfo"
        android:textAlignment="center"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegresarInicio"
        style="@style/CustomButtonStyle"
        android:layout_width="143dp"
        android:layout_height="47dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="46dp"
        android:onClick="btnAtras"
        android:text="@string/regresar"
        app:layout_constraintEnd_toStartOf="@+id/btnSiguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swRentaLib" />

    <TextView
        android:id="@+id/textView14"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="39dp"
        android:text="@string/prestLibro"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/edtPresioCompra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalles" />

    <TextView
        android:id="@+id/edtPresioCompra"
        style="@style/CustomEditTextStyle"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalles" />

    <TextView
        android:id="@+id/txtDetalles"
        style="@style/CustomEditTextStyle"
        android:layout_width="305dp"
        android:layout_height="270dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="53dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Switch
        android:id="@+id/swRentaLib"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="41dp"
        android:text="@string/renta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/swVentaLib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Switch
        android:id="@+id/swVentaLib"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="52dp"
        android:text="@string/venta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPresioCompra" />

    <Button
        android:id="@+id/btnSiguiente"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:onClick="btnSiguiente"
        android:text="@string/sig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVentaLib" />

</androidx.constraintlayout.widget.ConstraintLayout>
