<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentaActivity">

    <TextView
        android:id="@+id/textView15"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="71dp"
        android:text="@string/tituloComprar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/nomLibro"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNombreLib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="144dp"
        android:text="@string/prestLibro"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtPrecio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView18"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="44dp"
        android:text="@string/tipo"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtOperacionLib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView19"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="141dp"
        android:text="@string/correo"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/txtNombreLib"
        style="@style/CustomEditTextStyle"
        android:layout_width="146dp"
        android:layout_height="59dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/txtOperacionLib"
        style="@style/CustomEditTextStyle"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreLib"
        tools:layout_editor_absoluteX="234dp" />

    <TextView
        android:id="@+id/txtUsuario"
        style="@style/CustomEditTextStyle"
        android:layout_width="147dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperacionLib" />

    <TextView
        android:id="@+id/txtPrecio"
        style="@style/CustomEditTextStyle"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <Button
        android:id="@+id/btnComprarConf"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="75dp"
        android:onClick="btnComprar"
        android:text="@string/tituloComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

    <Button
        android:id="@+id/btnRegreso"
        style="@style/CustomBorrar"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="115dp"
        android:onClick="btnSalir"
        android:text="@string/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComprarConf" />
</androidx.constraintlayout.widget.ConstraintLayout>